# Masters

./: Gaussian_INV_Fit.C  GetTChainMacro.C  OO_sims_run30_tbt_calib_output_fitted_ptC0.8.root  OO_sims_run30_tbt_calib_output_fitted_ptC1.1.root  README.md  RunEtBLoop.C  RunEta_B_2Loop.C  Run_Eta.sh  Run_EtaB.sh
AI-ML-3Month-Course/: 01-Reading-List.md  02-Setup-Guide.md
AI-ML-3Month-Course/scratch/: pyproject.toml
Claude_Personal_AI_ML_Class_and_Notes/: .gitignore  README.md
Master_w_TS/: README.md
PPG_11_Efficiecies_others/: E_ff_fits_ppg11.C  Reverse_PPG11_effplots.C
RCP_Masters_work/: Pt_extraction.C  RunEtaLoop.C  runLCELoop.C
R_CP_Directory_RE/: Final_Y.C  RCP_Stack.C  RCP_sp_Eff_corr.C  Run24_Rcp_Styled_Systematics_Final.root  Y_Final_Eff.C  Yield_pt_spectra.C  Yield_single_particle_pt_spectra.C
Run24_w_pho_prob_cuts/: Background_Sub_Code.C  Histo_make.C  R24_0-30_CT_phoprob_Yproj_pt_4.0_5.0.root  R24_0-30_CT_phoprob_Yproj_pt_5.0_6.0.root  R24_60-100_CT_phoprob_Projection2D_output.root  R24_60-100_CT_phoprob_Yproj_pt_3.3_4.0.root  R24_60-100_CT_phoprob_Yproj_pt_4.0_5.0.root  R24_60-100_CT_phoprob_Yproj_pt_5.0_6.0.root  R24_60-100_CT_phoprob_Yproj_pt_6.0_7.0.root  R24_60-100_CT_phoprob_Yproj_pt_7.0_8.0.root  pt_binning_code.C  scaled_output_New_R24_0-30_CT_3.3-4_ptbin_photon_prob.root  scaled_output_New_R24_60-100_CT_3.3-4_ptbin_photon_prob.root  (+2 more)
src/calo_emc_pi0_tbt/: #CaloCalibEmc_eta.cc#  .CaloCalibEmc_eta.cc.swk  .CaloCalibEmc_eta.cc.swl  configure  configure.ac
src/calo_emc_pi0_tbt/Copies/: CaloCalibEmc_eta_MB_Cent_Copy.h
src/calo_emc_pi0_tbt/autom4te.cache/: requests  traces.1
src/calo_emc_pi0_tbt/other/: CaloCalibEmc_Pi0.h
(+506 files in other folders)
